cmd/aurelius/assets/static/css/base.css
html {
	min-height: 100%;
	scrollbar-color: hsl(0, 0%, 30%) hsl(0, 0%, 20%);
}

body {
	background: fixed url("/static/img/bg.svgz"),
		fixed linear-gradient(hsl(240, 2%, 22%) 50%, hsl(240, 2%, 15%));
	color: white;
	font-family: segoe ui, roboto, sans-serif;
}

.hidden {
	display: none !important;
}

.material-icons {
	-moz-user-select: -moz-none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

/* Modal dialog ***************************************************************/
.modal-overlay {
	display: block;
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background-color: rgba(0, 0, 0, 0.5);
	z-index: 99;
}

.modal {
	display: block;
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 100;
}

.dialog {
	padding: 0.75rem;
	min-width: 15rem;
	box-shadow: 0px 0px 1.5rem rgba(0, 0, 0, 0.5);
	border-radius: 0.25rem;
}

/* UI elements ****************************************************************/
.ui {
	background-color: hsl(0, 0%, 33%);
	color: white;
	scrollbar-color: initial;
}

.ui__table {
	border-spacing: 0.5em;
}

.ui__button {
	display: block;
	padding: 0.5em;
	margin: 0.5em;
	width: calc(100% - 1em);
	border: 1px solid;
	border-radius: 0.25em;
	background-color: rgba(0, 0, 0, 0.15);
	border-color: rgba(0, 0, 0, 0.54);
	color: white;
}
.ui__button:hover {
	background-color: rgba(255, 255, 255, 0.5);
	color: black;
}
.ui__button:active {
	background-color: white;
	color: black;
}

.ui__section-header {
	box-shadow: 0px 4px 2px -2px rgba(0, 0, 0, 0.25);
	padding-bottom: 0.1em;
}
.ui__section-body {
	margin: 0.5em 0 0.5em 1.5em;
}
.ui__section-body--scroll {
	max-height: 8em;
	overflow-y: scroll;
	scrollbar-color: hsl(0, 0%, 43%) hsl(0, 0%, 30%);
}

.ui__entry-group {
	margin: 1em 0 1em 0;
}
.ui__entry-label {
	display: flex;
	padding-left: 1rem;
	padding-right: 1rem;
}
.ui__entry-input {
	flex: 1;
}
.ui__entry-input--error {
	border: 2px solid rgb(220, 50, 50);
	background-color: rgb(255, 200, 200);
}

.ui__error {
	color: hsl(0, 100%, 65%);
	text-align: center;
}

.ui a {
	color: black;
	text-decoration: underline;
}

.ui kbd {
	background-color: hsl(0, 0%, 25%);
	border: 1px solid hsl(0, 0%, 15%);
	border-radius: 0.25em;
	padding: 0.2em 0.5em;
	font-family: monospace;
	font-size: 0.9em;
	color: white;
}

/* Playback controls **********************************************************/
.controls {
	background-color: hsl(0, 0%, 33%);
	color: white;
	display: flex;
	align-items: center;
}

.controls__track-image-container {
	display: flex;
	align-items: center;
}

.controls__track-image {
	height: 6rem;
	width: 6rem;
	margin: 0.5rem;
	object-fit: contain;
}

/* Controls to the right of the track image */
.controls__everything-else {
	flex: 1;
	position: relative;
}

/* Button */
.controls__button {
	cursor: pointer;
	color: hsl(0, 0%, 10%);
	font-size: 4rem;
}
.controls__button--medium {
	font-size: 3rem;
}
.controls--disabled .controls__button,
.controls__button--disabled {
	cursor: default;
	color: rgba(0, 0, 0, 0.3);
}

/* Progress/seek bar */
.controls__progress-trough {
	cursor: pointer;
	flex: 1;
	position: relative;
	height: 0.5rem;
	box-shadow: inset 0 0 3px black;
	margin: 0 0.5rem;
}
.controls--disabled .controls__progress-trough {
	cursor: default;
}

.controls__progress-fill {
	position: absolute;
	top: 0;
	left: 0;
	width: 0;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.27);
}

.controls__slider-range {
	position: absolute;
	left: 0;
	width: calc(100% - 3rem);
	height: 100%;
}
.controls__slider {
	cursor: pointer;
	position: absolute;
	width: 3rem;
	height: 200%;
	top: -50%;
	background-color: hsl(0, 0%, 10%);
	border-radius: 0.25em;
}
.controls--disabled .controls__slider {
	cursor: default;
	background-color: hsl(0, 0%, 24%);
}

/* Link */
.controls__link {
	cursor: pointer;
	font-style: italic;
	text-decoration: none;
	color: inherit;
}
.controls__link:hover {
	text-decoration: underline;
}

/* Marquee */
.controls__marquee-spacer {
	position: relative;
	height: 1.1em;
	margin: 0 0.5rem 0 0.5rem;
}
.controls__marquee-container {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 200%;
	overflow: hidden;
}
.controls__marquee {
	display: block;
	max-width: 100%;
	max-height: 100%;
	white-space: nowrap;
	text-align: center;
	font-size: 1.1em;
}

/* Positioning */
.controls__group {
	display: flex;
	height: 3rem;
	align-items: center;
	justify-content: center;
}
.controls__group--shift-up {
	position: relative;
	bottom: 0.5em;
}

.controls__bottom-left {
	position: absolute;
	bottom: 0.5rem;
	left: 0.5rem;
}
.controls__bottom-right {
	position: absolute;
	bottom: 0.5rem;
	right: 0.5rem;
}

/* Directory listing **********************************************************/

/* .dir {} */

.dir__listing {
	list-style: none;
	padding: 0;
}

.dir__entry > * {
	vertical-align: middle;
}

.dir__link {
	text-decoration: none;
	color: hsl(0, 0%, 66.3%);
}
.dir__link:hover {
	text-decoration: underline;
}

.dir__icon {
	color: hsl(198.3, 56.5%, 72.9%);
	font-size: 24px;
	margin-right: 0.25em;
}
.dir__icon--playing {
	display: none;
	color: white;
}

.dir__link--aux {
	margin-left: 0.5em;
	font-style: italic;
}

.dir__entry--playing .dir__link {
	color: white;
}
.dir__entry--playing .dir__icon {
	display: none;
}
.dir__entry--playing .dir__icon--playing {
	display: inline-block;
}

/* Side menu ******************************************************************/

.top-right__menu {
	position: fixed;
	z-index: 1;
	right: 0;
	top: 0;
	margin: 0.5rem;
	display: flex;
	flex-direction: column;
}

/* .menu {} */

.menu__button {
	cursor: pointer;
	font-size: 3rem;
	color: black;
	text-shadow: 0 0 2px white;
}

